# api/app/Api/V1/Actions/Support/ListMySupportTicketsAction.php
@@ -11,7 +11,7 @@ class ListMySupportTicketsAction
     public function execute(User $user): Collection
     {
         return SupportTicket::where('user_id', $user->id)
-            ->with(['lastMessage'])
+            ->with(['lastMessage', 'product'])
             ->withCount(['unreadMessagesForUser as unreadCount'])
             ->latest('updated_at')
             ->get();
